# demoagn

./: CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml  railway.json  requirements.txt
agents/dash/: __init__.py  __main__.py  agent.py
agents/dash/context/: __init__.py  business_rules.py  semantic_model.py
agents/dash/evals/: __init__.py  run_evals.py
agents/dash/scripts/: load_data.py  load_knowledge.py
agents/dash/tools/: __init__.py
agents/gcode/: __init__.py  __main__.py  agent.py
agents/guard/: __init__.py  __main__.py  agent.py  tools.py
agents/guard/evals/: __init__.py  run_evals.py  test_cases.py
agents/knowledge/: __init__.py  __main__.py  agent.py
agents/knowledge/evals/: __init__.py  grader.py  run_evals.py  test_cases.py
agents/knowledge/scripts/: __init__.py  load_knowledge.py
agents/mcp/: __init__.py  __main__.py  agent.py
agents/mcp/evals/: __init__.py  grader.py  run_evals.py  test_cases.py
agents/pal/: __init__.py  __main__.py  agent.py
agents/relay/: __init__.py  __main__.py  agent.py
agents/scout/: __init__.py  __main__.py  agent.py  paths.py
agents/seek/: __init__.py  __main__.py  agent.py
agents/sentinel/: __init__.py  __main__.py  agent.py  tools.py
agents/support/: __init__.py  __main__.py  agent.py
app/: config.yaml  main.py  registry.py
db/: session.py
evals/: __init__.py  __main__.py  accuracy.py  quality.py  reliability.py
scripts/: build_image.sh  railway_up.sh
teams/research/: __init__.py  team.py
utils/: __init__.py  exa.py
workflows/daily_brief/: __init__.py  workflow.py
(+21 files in other folders)
