[project]
name = "agno-demo"
version = "1.0.0"
requires-python = ">=3.12,<4"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno",
  "agno[scheduler]",
  "anthropic",
  "chromadb",
  "duckdb",
  "exa-py",
  "fastapi[standard]",
  "google-genai",
  "mcp",
  "nest_asyncio",
  "openai",
  "openinference-instrumentation-agno",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "pandas",
  "parallel-web",
  "pgvector",
  "pillow",
  "psycopg[binary]",
  "pypdf",
  "sqlalchemy",
  "yfinance",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "db*", "app*", "teams*", "workflows*", "registry*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "agno.*", "httpx.*", "mcp.*", "pandas.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
